fix minor css index.css - disable scrollbar display (scroll function still work)

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,9 +1,6 @@
 .app {
   color: #ffffff;
 
-  height: 100vh;
-  padding-bottom: 4em;
-
   /* * Hide scrollbar during an animation */
   overflow-x: hidden;
   position: relative;
