--- a/app/src/index.css
+++ b/app/src/index.css
@@ -9,6 +9,10 @@ body {
   background-color: #2e2e2e;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
